# Claude-Code-Deep-Research

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md  framework_selection.py  hierarchical_orchestrator.py  hybrid_retriever.py  memory_graph.py  observability.py  output_formatter.py  pyproject.toml  quality_gate.py  research_state.py
.claude/: README_KNOWLEDGE.md  mcp-servers.json
.claude/agents/: academic-researcher.md  community-listener.md  critic-evaluator.md  cross-domain-tracker.md  deep-research-report-writer.md  framework-selector.md  github-watcher.md  handoff-designer.md  link-validator.md  literature-analyzer.md  literature-review-writer.md  mcp-coordinator.md  performance-predictor.md  readiness-assessor.md  task_handle.md  timeout-specialist.md  visualization-generator.md
.claude/hooks/: detect_research_intent.py  pre-research.md  research_hooks.json  token_budget_check.py
.claude/knowledge/: anti_patterns.md  bilingual_format_guide.md  chinese_community_insights.md  cli_reference.md  cross_domain_tracker.md  deep_research_template.md  execution_examples.md  framework_selection.md  hierarchical_orchestration.md  hybrid_retriever.md  institution_patterns.md  knowledge_template.md  literature_review_template.md  logic_analysis.md  logic_analysis_schema.md  memory_graph.md  memory_system.md  observability_patterns.md  orchestration_patterns.md  performance_metrics.md  phase_protocols.md  quality_checklist.md  quality_validation.md  report_templates.md  research_state.md  resilience_patterns.md  time_checkpoint_protocol.md  value_assessment.md  verification_patterns.md  visualization_patterns.md  writing_principles.md
.claude/knowledge/reflections/: learned-patterns.md  summary.md
.claude/protocols/: afterflect-protocol.md  modular-structure-plan.md  phase1-parallel-research.md  preflect-protocol.md  reflection-protocol.md  report-generation.md  time-budget.md  verification-logic.md
tools/: batch_link_validator.py  checkpoint_manager.py  config.py  cross_domain_tracker.py  framework_selection.py  generate_visualizations.py  heartbeat_monitor.py  hierarchical_orchestrator.py  memory_graph.py  memory_graph_cli.py  memory_system.py  output_formatter.py  rate_limiter.py  research_orchestrator.py  resilience.py  validate_links.py  vector_store.py  visualization.py
